# megarepartos

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
.githooks/: pre-push
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_schema_inicial.py  0002_rls_business_tables.py  0003_campana_para_broadcast.py  0004_zona_broadcast_list_name.py
backend/src/megarepartos/: __init__.py  config.py  main.py
backend/src/megarepartos/api/: auth.py  campanas.py  clientes.py  empresa.py  envases.py  pedidos.py  productos.py  publico.py  usuarios.py  zonas.py
backend/src/megarepartos/domain/: _events.py  _repository.py  auth.py  campanas.py  clientes.py  empresa.py  envases.py  pedidos.py  productos.py  publico.py  usuarios.py  zonas.py
backend/src/megarepartos/infra/: audit_context.py  auth.py  db.py  errors.py  geocoding.py  logging.py
backend/src/megarepartos/models/: __init__.py  base.py  campana.py  cliente.py  empresa.py  evento.py  extension.py  mensaje.py  plan.py  producto.py  respuesta.py  sheet.py  template.py  usuario.py  zona.py
backend/src/megarepartos/schemas/: auth.py  campana.py  cliente.py  empresa.py  envase.py  pedido.py  producto.py  publico.py  usuario.py  zona.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: _isolation_helpers.py  conftest.py  test_aislamiento.py  test_audit_recorder.py  test_auth_api.py  test_campanas_api.py  test_clientes_api.py  test_empresa_api.py  test_envases_api.py  test_pedidos_api.py  test_productos_api.py  test_publico_link.py  test_rls_property.py  test_usuarios_api.py  test_zonas_api.py
backend/tests/unit/: test_broadcast_token.py  test_check_endpoint_isolation.py  test_geocoding.py  test_jwt.py  test_roles.py
behaviors/: _template.md  auditoria.md  auth.md  clientes.md  empresa.md  envases.md  frontend.md  geocoding.md  link_publico.md  multi_tenant.md  pedidos.md  productos.md  roles.md  usuarios.md  zonas.md
docs/: ARCHITECTURE.md  DEPLOY.md  DEVELOPMENT.md  MEGAREPARTOS_SPEC.md
extension/: README.md  app-content.js  background.js  manifest.json  popup.html  popup.js  wa-content.js
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: behavior_coverage.py  check_arquitectura.py  check_endpoint_isolation.py  check_test_coverage_changes.py
tareas/: TASK-000-setup.yaml  TASK-001-auth-google.yaml  TASK-002-empresa-usuario.yaml  TASK-003-multitenant-rls.yaml  TASK-004-repositorios-base.yaml  TASK-005-auditoria-base.yaml  TASK-006-isolation-suite.yaml  _template.yaml  (+9 more)
(+28 files in other folders)
