[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megarepartos"
version = "0.0.1"
description = "Plataforma SaaS de campañas de WhatsApp para negocios de reparto recurrente."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Lautaro Quiroga" }]

# Lista blanca definida en CLAUDE.md ("Dependencias > Backend").
# Cualquier librería nueva fuera de esta lista requiere justificación en el PR.
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<0.31",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "httpx>=0.27,<0.29",
    "python-jose[cryptography]>=3.3,<4.0",
    "python-multipart>=0.0.9,<0.1.0",
    "google-auth>=2.30,<3.0",
    "google-api-python-client>=2.130,<3.0",
    "mercadopago>=2.2,<3.0",
]

[project.optional-dependencies]
# Tooling de dev y testing. No son librerías de producto.
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "hypothesis>=6.100,<7.0",
    "factory-boy>=3.3,<4.0",
    "testcontainers[postgres]>=4.5,<5.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# ---- Ruff ----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "ASYNC",         # flake8-async
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["megarepartos"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
disallow_untyped_defs = false
explicit_package_bases = true

# ---- pytest ----
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "req(id): mapea un test a un REQ-ID de behaviors/",
    "isolation: tests de aislamiento multi-tenant",
    "e2e: tests end-to-end con Playwright",
    "integration: tests de integración con DB real",
    "unit: tests unitarios puros",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
